Made navigation and redux work together

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "proj",
-    "slug": "proj",
+    "name": "Movies n' Me",
+    "slug": "Movies n' Me",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
